--- a/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
@@ -21,7 +21,7 @@
 ;如果资源文件所在目录是"%SystemRoot%"或者"%SystemRoot%\System32"
 ;可省略目录路径仅写文件名(含扩展名)，如"imageres.dll"
 
-;<GUID文件路径>
+;<GUID文件路径>:
 ;HKCR\CLSID\<GUID>
 ;HKCR\WOW6432Node\CLSID\<GUID>
 ;HKLM\SOFTWARE\WOW6432Node\Classes\CLSID\<GUID>
@@ -39,11 +39,11 @@ Icon=shell32.dll,-16769
 ;打开文件所在的位置(&I)
 [37ea3a21-7493-4208-a011-7f9ea79ce9f5]
 Text=@*,-1033
-Icon=explorer.exe,0
+Icon=explorer.exe
 ;兼容性疑难解答(&Y)
 [1d27f844-3a1f-4410-85ac-14651078412d]
 Text=@*,-2022
-Icon=msdt.exe,0
+Icon=msdt.exe
 ;播放到设备
 [7ad84985-87b4-4a16-be58-8b72a5b390f7]
 Text=@playtomenu.dll,-101
@@ -98,7 +98,7 @@ Icon=ntshrui.dll,-123
 ;工作文件夹
 [E61BF828-5E63-4287-BEF1-60B1A4FDE0E3]
 Text=@WorkfoldersControl.dll,-1
-Icon=WorkFolders.exe,0
+Icon=WorkFolders.exe
 ;授予访问权限(&G)
 [f81e9010-6ea4-11ce-a7ff-00aa003ca9f6]
 Text=@*,-103
@@ -142,46 +142,46 @@ Text=@*,-30305
 Icon=imageres.dll,-5303
 [3080f90e-d7ad-11d9-bd98-0000947b0257]
 Text=窗口转换程序
-Icon=imageres.dll,0
+Icon=imageres.dll
 
 ;----------------显卡------------------
 ;用图形处理器运行
 [a929c4ce-fd36-4270-b4f5-34ecac5bd63c]
 Text=@nv3dappshextr.dll,-103
-Icon=nvcpl.dll,0
+Icon=nvcpl.dll
 ;更改 OpenGL 渲染 GPU...
 [e97dec16-a50d-49bb-ae24-cf682282e08d]
 Text=@nv3dappshextr.dll,-109
-Icon=nvcpl.dll,0
+Icon=nvcpl.dll
 [3D1975AF-48C6-4f8e-A182-BE0E08FA86A9]
 Text=NVIDIA 控制面板
-Icon=nvcpl.dll,0
+Icon=nvcpl.dll
 [9B5F5829-A529-4B12-814A-E81BCB8D93FC]
 Text=英特尔® 显卡设置
-Icon=.\igfxEM.exe,0
+Icon=.\igfxEM.exe
 [5E2121EE-0300-11D4-8D3B-444553540000]
 Text=AMD 显卡
 
 ;----------------压缩------------------
 [5B69A6B4-393B-459C-8EBB-214237A9E7AC]
 Text=Bandizip
-Icon=.\Bandizip.exe,0
+Icon=.\Bandizip.exe
 [9179176E-B763-3200-8500-BB1B90B3D5DE]
 Text=360zip
-Icon=.\360zip.exe,0
+Icon=.\360zip.exe
 [B41DB860-64E4-11D2-9906-E49FADC173CA]
 Text=WinRAR 64bit
 [B41DB860-8EE4-11D2-9906-E49FADC173CA]
 Text=WinRAR 32bit
 [23170F69-40C1-278A-1000-000100020000]
 Text=7-zip
-Icon=.\7zG.exe,0
+Icon=.\7zG.exe
 [B1832224-9F22-4965-A6E8-E6A6E3C4FDF7]
 Text=52好压
-Icon=.\kzip_main.exe,0
+Icon=.\kzip_main.exe
 [5FED836A-C96C-4d88-A91E-F63F07726585]
 Text=2345好压
-Icon=.\HaoZip.exe,0
+Icon=.\HaoZip.exe
 [6ADF19E3-77A3-4395-ADB4-9FD7D351EB3E]
 Text=快压
 [903D855A-D671-4A8E-A592-9168755917DB]
@@ -192,56 +192,56 @@ Text=快压
 Text=快压
 [e0d79304-84be-11ce-9641-444553540000]
 Text=WinZip
-Icon=.\WzPreloader.exe,0
+Icon=.\WzPreloader.exe
 [acf03765-1658-485f-9615-fe03c372fb8c]
 Text=微压
 [dd847e93-86df-4d75-a421-46d29228f6da]
 Text=极光压缩
-Icon=.\plFM.exe,0
+Icon=.\plFM.exe
 [5e3b6ea4-de96-464f-bb86-5587969f4c62]
 Text=万能压缩
 [9175e343-1c41-4490-b178-14f36504f07e]
 Text=160压缩
-Icon=.\160zip.exe,0
+Icon=.\160zip.exe
 [5e3ca55c-d9f3-4d1c-8b94-ad192b0f7c16]
 Text=速压
-Icon=.\Suzip.exe,0
+Icon=.\Suzip.exe
 [02e77c8d-2798-441e-8e6d-0c2ed9fe206e]
 Text=简压缩
-Icon=.\SimpleZip.exe,0
+Icon=.\SimpleZip.exe
 [5c551008-a347-4db3-af48-014076fd2b46]
 Text=极速压缩
-Icon=.\JsZip.exe,0
+Icon=.\JsZip.exe
 [0a4861a5-448a-48b4-812a-cf71a07a674f]
 Text=6789压缩
 [7522b611-f22b-4f24-9ce4-3ecbba85c126]
 Text=CoffeeZip
 [aa7f8063-f898-44d0-b147-8a6e9891e32e]
 Text=布丁压缩
-Icon=.\PDZip.exe,0
+Icon=.\PDZip.exe
 [9b8dff9d-0cb2-4100-8f21-c6dd6ce01141]
 Text=布丁压缩
-Icon=.\PDZip.exe,0
+Icon=.\PDZip.exe
 [d81a0ed9-6c47-417b-b298-4ebd813cabd0]
 Text=极客压缩
-Icon=.\GeekZip.exe,0
+Icon=.\GeekZip.exe
 [e677c7ad-2b66-4539-aa29-3771a1cfeda9]
 Text=jZip
-Icon=.\jZip.exe,0
+Icon=.\jZip.exe
 [a6630968-27dc-8db8-9bce-e12b3198a9b1]
 Text=WinArchiver
-Icon=.\WinArchiver.exe,0
+Icon=.\WinArchiver.exe
 [1532b32d-3a75-4a4d-9b38-5a6000ea7045]
 Text=FreeArc
-Icon=..\FreeArc.exe,0
+Icon=..\FreeArc.exe
 [AD392E40-428C-459F-961E-9B147782D099]
 Text=UltraISO
-Icon=.\UltraISO.exe,0
+Icon=.\UltraISO.exe
 
 ;----------------杀软------------------
 [09A47860-11B0-4DA5-AFA5-26D86198A780]
 Text=Microsoft Defender
-Icon=.\EppManifest.dll,0
+Icon=.\EppManifest.dll
 [18A3E590-F219-4105-9079-93DAFA51B9D6]
 Text=使用火绒安全进行杀毒
 [9F012318-CAA5-402C-9BF6-28EB36F61496]
@@ -252,112 +252,128 @@ Text=扫描病毒(电脑管家)
 Text=文件粉碎(电脑管家)
 [CBDECEF7-7A29-4cbf-A009-2673D82C7BF9]
 Text=强力卸载(电脑管家)
-Icon=.\QQPCSoftMgr.exe,0
+Icon=.\QQPCSoftMgr.exe
 [C5617F6A-39BB-436D-91CF-61C1B45DD688]
 Text=深度加速(管家小火箭)
 [b7667919-3765-4815-a66d-98a09be662d6]
 Text=清理垃圾(电脑管家)
 [086F171D-5ED1-4ED2-B736-CFF3AD6A128E]
 Text=使用 360杀毒 扫描
-Icon=.\msdev.exe,0
+Icon=.\msdev.exe
 [7C0F6D57-E799-4C8A-A319-8E2B4D724CF0]
 Text=360解除占用 && 强力删除
-Icon=.\360FileUnlock.exe,0
+Icon=.\360FileUnlock.exe
 [5E19C0CE-C02C-46c2-98C3-A2E12EDE0E17]
 Text=360强力卸载 && 桌面助手
-Icon=.\SoftMgr.exe,0
+Icon=.\SoftMgr.exe
 [C4F75DB1-B9F4-425A-9F5B-778911BCF176]
 Text=2345扫描病毒 && 强力删除
-Icon=.\2345MPCSafe.exe,0
+Icon=.\2345MPCSafe.exe
 [6B3BA4A8-EC7E-4714-9ECF-EB33995B3384]
 Text=使用2345软件管家卸载软件
-Icon=..\..\2345SoftMgr.exe,0
+Icon=..\..\2345SoftMgr.exe
 [DDEA5705-1BB0-4C03-AC1E-8FF9716A0D51]
 Text=金山毒霸(64位)扫描 && 文件粉碎
-Icon=.\kismain.exe,0
+Icon=.\kismain.exe
 [D21D88E8-4123-48BA-B0B1-3FDBE4AE5FA4]
 Text=金山毒霸(32位)扫描 && 文件粉碎
-Icon=.\kismain.exe,0
+Icon=.\kismain.exe
 [758c684b-4d10-4bc1-90da-6bebf0b4e0b4]
 Text=使用联想电脑管家进行扫描
 [C49499AC-DC25-478B-B903-E005012B3DD1]
 Text=使用智量扫描
-Icon=.\WiseVector.exe,0
+Icon=.\WiseVector.exe
 [cca9efd3-29ed-430a-ba6d-e6bbff0a60c2]
 Text=McAfee
-Icon=.\McInstru.exe,0
+Icon=.\McInstru.exe
 [472083b0-c522-11cf-8763-00608cc02f24]
 Text=Avast
-Icon=..\AvastUI.exe,0
+Icon=..\AvastUI.exe
 [45ac2688-0253-4ed8-97de-b5370fa7d48a]
 Text=使用 Avira 扫描所选文件
-Icon=..\Launcher\Avira.Systray.exe,0
+Icon=..\Launcher\Avira.Systray.exe
 [9b9f6e01-a5cf-4269-b245-cff66a7daebd]
 Text=卡巴斯基
 [57ce581a-0cb6-4266-9ca0-19364c90a0b3]
 Text=Malwarebytes
+[f7caa2a1-67a2-44bb-b20f-202fd8eb1dab]
+Text=Norton 360
+Icon=.\uiStub.exe
+[fad61b3d-699d-49b2-be16-7f82cb4c59ca]
+Text=Norton文件智能分析
+Icon=.\uiStub.exe
+[e8215bea-3290-4c73-964b-75502b9b41b2]
+Text=Norton File Shredder
 
 ;--------------上传下载----------------
 [cb3d0f55-bc2c-4c1a-85ed-23ed75b5106b]
 Text=OneDrive
-Icon=..\..\OneDrive.exe,0
+Icon=..\..\OneDrive.exe
 [6D85624F-305A-491d-8848-C1927AA0D790]
 Text=上传到百度网盘
-Icon=.\BaiduNetdisk.exe,0
+Icon=.\BaiduNetdisk.exe
 [2008caf4-a5c1-4037-99a8-699e4d01456d]
 Text=天翼云盘
-Icon=.\eCloud.exe,0
+Icon=.\eCloud.exe
 [1d39a523-4df5-4562-8fff-08c740632f4f]
 Text=360云盘
-Icon=.\360WangPan.exe,0
+Icon=.\360WangPan.exe
 [eee949eb-c9ed-4967-98b0-ed4e543befa5]
 Text=115网盘
-Icon=..\115chrome.exe,0
+Icon=..\115chrome.exe
 [171b6b53-17b1-40b7-afb2-a415b2b40401]
 Text=上传到腾讯微云
-Icon=..\..\..\..\..\..\..\WeiyunApp.exe,0
+Icon=..\..\..\..\..\..\..\WeiyunApp.exe
 [5D652B62-B702-496A-92BC-92C308251FEA]
 Text=坚果云
 [67F4D210-BFC2-4ADD-9A2A-C9B9E1F42C4F]
 Text=上传到 “WPS云文档”
 [AA147FFB-0B1F-4BB1-9B1E-8D062B35C145]
 Text=自动同步文件夹到 “WPS云文档”
+[970a26b5-2b84-4b60-8067-1440c229672d]
+Text=钉盘
+Icon=..\DingtalkLauncher.exe
+[ecd97de5-3c8f-4acb-aeee-ccab78f7711c]
+Text=Dropbox
 
 ;----------------PDF------------------
 [9c5397bb-07be-4e38-98ba-395f94045091]
 Text=福昕PDF编辑器
-Icon=..\FoxitPhantom.exe,0
+Icon=..\FoxitPhantom.exe
 [a6595cd1-bf77-430a-a452-18696685f7c7]
 Text=Adobe Acrobat
-Icon=..\Acrobat\Acrobat.exe,0
+Icon=..\Acrobat\Acrobat.exe
 [d25b2cab-8a9a-4517-a9b2-cb5f68a5a802]
 Text=转换为Adobe PDF(&B)
 [1ECDA7BF-4DFA-41D8-9380-1A27B26CFC41]
 Text=使用WPS PDF编辑
-Icon=..\..\wpspdf.exe,0
+Icon=..\..\wpspdf.exe
 [E3ED4700-22D4-41B6-8144-E3F5F1AC5153]
 Text=使用WPS PDF编辑
-Icon=..\..\wpspdf.exe,0
+Icon=..\..\wpspdf.exe
 [AF1D7D2F-6AE8-4BAA-ABFA-738201F4871C]
 Text=WPS Office PDF
-Icon=.\wpspdf.exe,0
+Icon=.\wpspdf.exe
 [b4e15cd0-f916-4c8e-830a-15e3e9d01a1b]
 Text=迅读PDF大师 合并、拆分、转换
-Icon=.\MasterPDF.exe,0
+Icon=.\MasterPDF.exe
 [19a73c67-f0b8-4a28-8c33-9d4eddd6fcbc]
 Text=云上PDF
-Icon=.\iPDF.exe,0
+Icon=.\iPDF.exe
 [29424e92-60a1-40c0-bf79-1b8472dde706]
 Text=使用PDF猫编辑器打开
-Icon=.\M_pdfEdit.exe,0
+Icon=.\M_pdfEdit.exe
 [29424e91-60a1-40c0-bf79-1b8472dde606]
 Text=使用转转大师PDF编辑器打开
-Icon=.\ZPDFEdit.exe,0
+Icon=.\ZPDFEdit.exe
 [098a124a-aa1c-38c8-a65e-d1199a14516a]
 Text=Convert to...(万兴PDF专家)
 [fb074836-8286-4089-84dc-f504e9ef621c]
 Text=ABBYY FineReader
-Icon=..\FineUpdate.exe,0
+Icon=..\FineUpdate.exe
+[d16adfe3-66c5-4df5-9978-87de0c687e85]
+Text=嗨格式PDF转换器
+Icon=.\HiPdfConvert.exe
 
 ;--------------影音图像----------------
 [8a734961-c4aa-4741-ac1e-791acebf5b39]
@@ -372,15 +388,20 @@ Text=使用 Media Player 播放(&P)
 Text=幻灯片放映
 [9B6D38F3-8EF4-48A5-AD30-FFFFFFFFFFFF]
 Text=Honeyview
-Icon=.\Honeyview.exe,0
+Icon=.\Honeyview.exe
 [c2396f1e-4ba2-4b7d-857a-f764761c012b]
 Text=ACD看图
-Icon=.\AcdKantu.exe,0
+Icon=.\AcdKantu.exe
 [83a97a48-f5d7-4d12-8ba3-5263a016d936]
 Text=使用光影4.0编辑
 [8f556da3-987d-47b0-aa88-eb8d52fe1b9a]
 Text=迅雷播放组件
-Icon=..\Program\XMP\XMP.exe,0
+Icon=..\Program\XMP\XMP.exe
+[5cd76c57-6893-478a-b776-47e7c82504be]
+Text=爱奇艺万能联播
+Icon=.\GeePlayer.exe
+[a3888921-cfd3-4a6b-89bf-08e6b95716e8]
+Text=图片工厂(&F)
 
 ;----------------美化------------------
 [CF444751-60FC-48B8-AC0F-363063EB2A9E]
@@ -389,19 +410,24 @@ Text=开启桌面整理(电脑管家)
 Text=换壁纸(小鸟壁纸)
 [3b7162fb-4389-40c8-83a5-da10d491ec66]
 Text=映射此文件夹到桌面(小智桌面)
-Icon=.\XZDesktop.exe,0
+Icon=.\XZDesktop.exe
 [96babf4f-7c38-4885-b407-3800f461669b]
 Text=打开火萤视频桌面
-Icon=..\..\HYVideoDesktop.exe,0
+Icon=..\..\HYVideoDesktop.exe
 [a2a9545d-a0c2-42b4-9708-a0b2badd77c9]
 Text=附到「开始」菜单(&U)(StartIsBack)
-Icon=.\StartIsBackCfg.exe,0
+Icon=.\StartIsBackCfg.exe
 [2d5ad9eb-31bc-48f7-a438-28f363632c73]
 Text=开启布丁桌面
-Icon=.\PDLanuncher.exe,0
+Icon=.\PDLanuncher.exe
 [b5e436bc-642a-4bf6-b725-26038af26e89]
 Text=开启猎豹轻桌面
-Icon=.\kdesk.exe,0
+Icon=.\kdesk.exe
+[5f8d079b-8ce6-4f58-bf10-55c1b68d88f3]
+Text=选择颜色设置
+Icon=.\ChromaTune.exe
+[6c125022-639d-43cc-9f3d-647e6cc69ef1]
+Text=右键菜单背景图片插件(第三方)
 
 ;--------------文件处理----------------
 [53D2405C-48AB-4C8A-8F59-CE0610F13BBC]
@@ -410,18 +436,31 @@ Text=通过QQ发送到
 Text=Edit with &Notepad++
 [A3777921-CFD3-4A6B-89BF-08E6B95716E8]
 Text=格式工厂(&F)
-Icon=.\FormatFactory.exe,0
+Icon=.\FormatFactory.exe
+[af9b72b5-f4e4-44b0-a3d9-b55b748efe90]
+Text=File Converter
+Icon=.\FileConverter.exe
 [dde4beeb-dde6-48fd-8eb5-035c09923f83]
 Text=Unlocker
-Icon=.\Unlocker.exe,0
+Icon=.\Unlocker.exe
+[0bb27cda-7029-4c0e-9c56-d922b229f0eb]
+Text=解除文件锁定(LockHunter)
+Icon=.\LockHunter.exe
 [410bf280-86ef-4e0f-8279-ec5848546ad3]
 Text=IObit Unlocker
-Icon=.\IObitUnlocker.exe,0
+Icon=.\IObitUnlocker.exe
 [836ab26c-2de4-41d3-ac24-4c6c2699b960]
 Text=强力卸载(IObit Uninstaller)
+[fe8e6ad6-dabe-45e1-88c2-48dc4578924c]
+Text=Uninstall Tool
+[b3026062-4d7e-3601-9a6b-622ceac3fc5c]
+Text=File Governor
+Icon=.\FileGovernor.exe
+[1650dc30-2343-498a-b49a-37b90918f611]
+Text=CleanMyPC
 [6CB83A5A-AA68-4895-9F54-175E789AE149]
 Text=Balabolka
-Icon=.\balabolka.exe,0
+Icon=.\balabolka.exe
 ;PowerToys PowerRename
 [0440049f-d1dc-4e46-b27b-98393d79486b]
 Text=@*,-101
@@ -430,35 +469,38 @@ Text=@*,-101
 Text=@*,-101
 [2e7a2c6c-b938-40a4-ba1c-c7ec982dc202]
 Text=发布DWF
-Icon=.\AcLauncher.exe,0
+Icon=.\AcLauncher.exe
 [30351349-7b7d-4fcc-81b4-1e394ca267eb]
 Text=TortoiseSVN
-Icon=.\TortoiseIDiff.exe,0
+Icon=.\TortoiseIDiff.exe
 [10A0FDD2-B0C0-4CD4-A7AE-E594CE3B91C8]
 Text=TortoiseGit
-Icon=.\TortoiseGitProc.exe,0
+Icon=.\TortoiseGitProc.exe
 [2a535b11-6cfc-4e85-a75f-0e397b1584cf]
 Text=通过网易邮箱大师发送
-Icon=..\mailmaster.exe,0
+Icon=..\mailmaster.exe
 [57fa2d12-d22d-490a-805a-5cb48e84f12a]
 Text=Beyond Compare
-Icon=.\BCompare.exe,0
+Icon=.\BCompare.exe
 [9557f42f-bd61-4e26-9752-33a8a20fc9f9]
 Text=分享文件(华为电脑管家)
-Icon=.\PCManager.exe,0
+Icon=.\PCManager.exe
 [c3db4192-4c22-428f-8c12-cf9cfabbdd17]
 Text=通过AirDroid发送到我的设备
 [0b488c12-e68e-44d7-9259-fb8e5df8bb27]
 Text=内网通
-Icon=.\ShiYeLine.exe,0
+Icon=.\ShiYeLine.exe
 [256ef94c-697d-4986-b99b-9d3b15d79b49]
 Text=Infinit
 [a97a01b0-3b66-4336-bc9b-168e64bfb296]
 Text=广讯通发送文件
-Icon=.\GXT.exe,0
+Icon=.\GXT.exe
 [1ed0f018-76b9-4db9-9c06-ca0f3088f04f]
 Text=FileLocator Pro
 [00000000-0000-0000-0000-000000000012]
 Text=显示隐藏文件+扩展名
 [c1b2c38f-3dca-4e3d-bc34-d5b87b636543]
 Text=FileMenu Tools
+[4380c993-0c43-4e02-9a7a-0d40b6ea7590]
+Text=Defraggler
+Icon=.\Defraggler.exe
