添加使用Shell-NeverDefault规则

--- a/ContextMenuManager/Properties/Resources/Texts/AppLanguageDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/AppLanguageDic.ini
@@ -102,9 +102,10 @@ SetDefault = 默认
 SetTop = 置顶
 SetBottom = 置底
 OtherAttributes = 其他属性
-OnlyWithShift = 仅在按住Shift键后显示
-OnlyInExplorer = 仅在Explorer窗口显示
+OnlyWithShift = 仅在按住 Shift 键后显示
+OnlyInExplorer = 仅在 Explorer 窗口显示
 NoWorkingDirectory = 不使用右键所处目录信息
+NeverDefault = 从不作为左键默认执行命令
 Details = 详细信息
 WebSearch = 网页搜索
 ChangeCommand = 更改命令
