添加支持编辑通用文档文件的右键菜单

--- a/ContextMenuManager/Properties/Resources/Texts/AppLanguageDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/AppLanguageDic.ini
@@ -36,6 +36,7 @@ LnkFile = lnk文件
 UwpLnk = uwp lnk
 ExeFile = exe文件
 TextFile = 文本文件
+DocumentFile = 文档文件
 ImageFile = 图像文件
 VideoFile = 视频文件
 AudioFile = 音频文件
@@ -76,6 +77,7 @@ LnkFile = 所有快捷方式的右键菜单
 UwpLnk = Win8~Win10 UWP应用快捷方式的右键菜单
 ExeFile = 所有EXE可执行文件的右键菜单
 TextFile = 通用文本格式(如.txt、.ini)文件的右键菜单
+DocumentFile = 通用文档格式(如.docx、.pptx)文件的右键菜单
 ImageFile = 通用图像格式(如.jpg、.png)文件的右键菜单
 VideoFile = 通用视频格式(如.avi、.wmv)文件的右键菜单
 AudioFile = 通用音频格式(如.mp3、.wav)文件的右键菜单
