添加设置文件感知类型功能

--- a/ContextMenuManager/Properties/Resources/Texts/AppLanguageDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/AppLanguageDic.ini
@@ -146,6 +146,7 @@ NewItem = 新建一个菜单项目
 AddGuidBlockedItem = 添加GUID锁定项目
 LockNewMenu = 锁定新建菜单
 CurrentExtension = 你当前选择的文件格式为
+SetPerceivedType = 设置文件格式感知类型
 EditSubItems = 编辑 "%s" 的子菜单项目
 InvalidItem = 无效菜单项目:
 Separator = ●●●●●●●●●●●●●●●●●●
