感知类型描述

--- a/ContextMenuManager/Properties/Resources/Texts/AppLanguageDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/AppLanguageDic.ini
@@ -76,11 +76,11 @@ WinX = Win8~Win10 "开始" 按钮的右键Win+X菜单项目
 LnkFile = 所有快捷方式的右键菜单
 UwpLnk = Win8~Win10 UWP应用快捷方式的右键菜单
 ExeFile = 所有EXE可执行文件的右键菜单
-TextFile = 通用文本格式(如.txt、.ini)文件的右键菜单
-DocumentFile = 通用文档格式(如.docx、.pptx)文件的右键菜单
-ImageFile = 通用图像格式(如.jpg、.png)文件的右键菜单
-VideoFile = 通用视频格式(如.avi、.wmv)文件的右键菜单
-AudioFile = 通用音频格式(如.mp3、.wav)文件的右键菜单
+TextFile = 通用文本格式 (感知类型为Text) 文件的右键菜单
+DocumentFile = 通用文档格式 (感知类型为Document) 文件的右键菜单
+ImageFile = 通用图像格式 (感知类型为Image) 文件的右键菜单
+VideoFile = 通用视频格式 (感知类型为Video) 文件的右键菜单
+AudioFile = 通用音频格式 (感知类型为Audio) 文件的右键菜单
 ImageDirectory = 通用图像文件目录的右键菜单
 VideoDirectory = 通用视频文件目录的右键菜单
 AudioDirectory = 通用音频文件目录的右键菜单
