--- a/Update.ini
+++ b/Update.ini
@@ -1,4 +1,4 @@
 [Update]
 Version=2.2.0.0
 Url=https://github.com/BluePointLilac/ContextMenuManager/releases/download/2.2.0.0/ContextMenuManager.zip
-Info=【更新描述】\n(1).支持定义所有格式文件的右键菜单；\n(2).优化规则“使用 Skype 共享”，可永久禁用；\n(3)支持更改程序内网页搜索引擎；\n(4).添加设置文件格式感知类型功能；\n(5).扩充程序GUID字典，更友好！
+Info=【更新描述】\n(1).支持定义所有格式文件的右键菜单；\n(2).优化规则“使用 Skype 共享”，可永久禁用；\n(3).支持更改程序内网页搜索引擎；\n(4).添加设置文件格式感知类型功能；\n(5).扩充程序GUID字典，更友好！
