--- a/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
@@ -305,7 +305,9 @@ Icon=.\uiStub.exe
 [e8215bea-3290-4c73-964b-75502b9b41b2]
 Text=Norton File Shredder
 
-;--------------上传下载----------------
+;----------------传输------------------
+[53D2405C-48AB-4C8A-8F59-CE0610F13BBC]
+Text=通过QQ发送到
 [cb3d0f55-bc2c-4c1a-85ed-23ed75b5106b]
 Text=OneDrive
 Icon=..\..\OneDrive.exe
@@ -326,6 +328,7 @@ Text=上传到腾讯微云
 Icon=..\..\..\..\..\..\..\WeiyunApp.exe
 [5D652B62-B702-496A-92BC-92C308251FEA]
 Text=坚果云
+Icon=*,3
 [67F4D210-BFC2-4ADD-9A2A-C9B9E1F42C4F]
 Text=上传到 “WPS云文档”
 [AA147FFB-0B1F-4BB1-9B1E-8D062B35C145]
@@ -335,6 +338,28 @@ Text=钉盘
 Icon=..\DingtalkLauncher.exe
 [ecd97de5-3c8f-4acb-aeee-ccab78f7711c]
 Text=Dropbox
+[30351349-7b7d-4fcc-81b4-1e394ca267eb]
+Text=TortoiseSVN
+Icon=.\TortoiseIDiff.exe
+[10A0FDD2-B0C0-4CD4-A7AE-E594CE3B91C8]
+Text=TortoiseGit
+Icon=.\TortoiseGitProc.exe
+[2a535b11-6cfc-4e85-a75f-0e397b1584cf]
+Text=通过网易邮箱大师发送
+Icon=..\mailmaster.exe
+[9557f42f-bd61-4e26-9752-33a8a20fc9f9]
+Text=分享文件(华为电脑管家)
+Icon=.\PCManager.exe
+[c3db4192-4c22-428f-8c12-cf9cfabbdd17]
+Text=通过AirDroid发送到我的设备
+[0b488c12-e68e-44d7-9259-fb8e5df8bb27]
+Text=内网通
+Icon=.\ShiYeLine.exe
+[256ef94c-697d-4986-b99b-9d3b15d79b49]
+Text=Infinit
+[a97a01b0-3b66-4336-bc9b-168e64bfb296]
+Text=广讯通发送文件
+Icon=.\GXT.exe
 
 ;----------------PDF------------------
 [9c5397bb-07be-4e38-98ba-395f94045091]
@@ -402,6 +427,9 @@ Text=爱奇艺万能联播
 Icon=.\GeePlayer.exe
 [a3888921-cfd3-4a6b-89bf-08e6b95716e8]
 Text=图片工厂(&F)
+;PowerToys调整图片大小
+[51b4d7e5-7568-4234-b4bb-47fb3c016a69]
+Text=@*,-101
 
 ;----------------美化------------------
 [CF444751-60FC-48B8-AC0F-363063EB2A9E]
@@ -430,10 +458,17 @@ Icon=.\ChromaTune.exe
 Text=右键菜单背景图片插件(第三方)
 
 ;--------------文件处理----------------
-[53D2405C-48AB-4C8A-8F59-CE0610F13BBC]
-Text=通过QQ发送到
 [B298D29A-A6ED-11DE-BA8C-A68E55D89593]
-Text=Edit with &Notepad++
+Text=Notepad++
+[36d94110-787c-4828-9c1b-0dafebc36069]
+Text=EditPlus
+Icon=.\EditPlus.exe
+[b5eedee0-c06e-11cf-8c56-444553540000]
+Text=UltraEdit
+Icon=.\uedit64.exe
+[51eee242-ad87-11d3-9c1e-0090278bbd99]
+Text=Vim
+Icon=..\vim.exe
 [A3777921-CFD3-4A6B-89BF-08E6B95716E8]
 Text=格式工厂(&F)
 Icon=.\FormatFactory.exe
@@ -464,37 +499,15 @@ Icon=.\balabolka.exe
 ;PowerToys PowerRename
 [0440049f-d1dc-4e46-b27b-98393d79486b]
 Text=@*,-101
-;PowerToys调整图片大小
-[51b4d7e5-7568-4234-b4bb-47fb3c016a69]
-Text=@*,-101
 [2e7a2c6c-b938-40a4-ba1c-c7ec982dc202]
 Text=发布DWF
 Icon=.\AcLauncher.exe
-[30351349-7b7d-4fcc-81b4-1e394ca267eb]
-Text=TortoiseSVN
-Icon=.\TortoiseIDiff.exe
-[10A0FDD2-B0C0-4CD4-A7AE-E594CE3B91C8]
-Text=TortoiseGit
-Icon=.\TortoiseGitProc.exe
-[2a535b11-6cfc-4e85-a75f-0e397b1584cf]
-Text=通过网易邮箱大师发送
-Icon=..\mailmaster.exe
 [57fa2d12-d22d-490a-805a-5cb48e84f12a]
 Text=Beyond Compare
 Icon=.\BCompare.exe
-[9557f42f-bd61-4e26-9752-33a8a20fc9f9]
-Text=分享文件(华为电脑管家)
-Icon=.\PCManager.exe
-[c3db4192-4c22-428f-8c12-cf9cfabbdd17]
-Text=通过AirDroid发送到我的设备
-[0b488c12-e68e-44d7-9259-fb8e5df8bb27]
-Text=内网通
-Icon=.\ShiYeLine.exe
-[256ef94c-697d-4986-b99b-9d3b15d79b49]
-Text=Infinit
-[a97a01b0-3b66-4336-bc9b-168e64bfb296]
-Text=广讯通发送文件
-Icon=.\GXT.exe
+[c3b42c03-c1b7-4c1a-b384-bbae19646333]
+Text=UltraCompare
+Icon=.\uc.exe
 [1ed0f018-76b9-4db9-9c06-ca0f3088f04f]
 Text=FileLocator Pro
 [00000000-0000-0000-0000-000000000012]
