--- a/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
@@ -304,6 +304,8 @@ Text=Norton文件智能分析
 Icon=.\uiStub.exe
 [e8215bea-3290-4c73-964b-75502b9b41b2]
 Text=Norton File Shredder
+[1c7593cb-c1cc-4ba7-be52-8eea47f9cb1d]
+Text=使用瑞星杀毒
 
 ;----------------传输------------------
 [53D2405C-48AB-4C8A-8F59-CE0610F13BBC]
