--- a/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
@@ -145,13 +145,11 @@ Text=窗口转换程序
 Icon=imageres.dll
 
 ;----------------显卡------------------
-;用图形处理器运行
 [a929c4ce-fd36-4270-b4f5-34ecac5bd63c]
-Text=@nv3dappshextr.dll,-103
+Text=用图形处理器运行
 Icon=nvcpl.dll
-;更改 OpenGL 渲染 GPU...
 [e97dec16-a50d-49bb-ae24-cf682282e08d]
-Text=@nv3dappshextr.dll,-109
+Text=更改 OpenGL 渲染 GPU...
 Icon=nvcpl.dll
 [3D1975AF-48C6-4f8e-A182-BE0E08FA86A9]
 Text=NVIDIA 控制面板
@@ -338,6 +336,9 @@ Text=自动同步文件夹到 “WPS云文档”
 [970a26b5-2b84-4b60-8067-1440c229672d]
 Text=钉盘
 Icon=..\DingtalkLauncher.exe
+[0229e5e7-09e9-45cf-9228-0228ec7d5f17]
+Text=MEGA
+Icon=.\MEGAsync.exe
 [ecd97de5-3c8f-4acb-aeee-ccab78f7711c]
 Text=Dropbox
 [30351349-7b7d-4fcc-81b4-1e394ca267eb]
@@ -362,6 +363,8 @@ Text=Infinit
 [a97a01b0-3b66-4336-bc9b-168e64bfb296]
 Text=广讯通发送文件
 Icon=.\GXT.exe
+[41b3b91f-d6b3-3430-bb86-a143f85353ca]
+Text=Huawei Share
 
 ;----------------PDF------------------
 [9c5397bb-07be-4e38-98ba-395f94045091]
@@ -401,6 +404,9 @@ Icon=..\FineUpdate.exe
 [d16adfe3-66c5-4df5-9978-87de0c687e85]
 Text=嗨格式PDF转换器
 Icon=.\HiPdfConvert.exe
+[2acd35ab-f74a-4c20-aa9b-2de80081626d]
+Text=PDF-XChange Editor
+Icon=..\PDF Editor\PDFXEdit.exe
 
 ;--------------影音图像----------------
 [8a734961-c4aa-4741-ac1e-791acebf5b39]
@@ -429,9 +435,10 @@ Text=爱奇艺万能联播
 Icon=.\GeePlayer.exe
 [a3888921-cfd3-4a6b-89bf-08e6b95716e8]
 Text=图片工厂(&F)
-;PowerToys调整图片大小
 [51b4d7e5-7568-4234-b4bb-47fb3c016a69]
-Text=@*,-101
+Text=调整图片大小(PowerToys)
+[5c6a637c-9780-4d0f-a379-4732edcce7c3]
+Text=网易云音乐
 
 ;----------------美化------------------
 [CF444751-60FC-48B8-AC0F-363063EB2A9E]
@@ -447,6 +454,9 @@ Icon=..\..\HYVideoDesktop.exe
 [a2a9545d-a0c2-42b4-9708-a0b2badd77c9]
 Text=附到「开始」菜单(&U)(StartIsBack)
 Icon=.\StartIsBackCfg.exe
+[6a451c0a-9597-4915-bcce-6e859bc996b2]
+Text=Pin to Start (Start10)
+Icon=.\Start10.exe
 [2d5ad9eb-31bc-48f7-a438-28f363632c73]
 Text=开启布丁桌面
 Icon=.\PDLanuncher.exe
@@ -488,8 +498,14 @@ Text=IObit Unlocker
 Icon=.\IObitUnlocker.exe
 [836ab26c-2de4-41d3-ac24-4c6c2699b960]
 Text=强力卸载(IObit Uninstaller)
+[2803063f-4b8d-4dc6-8874-d1802487fe2d]
+Text=Advanced SystemCare
+Icon=*,3
 [fe8e6ad6-dabe-45e1-88c2-48dc4578924c]
 Text=Uninstall Tool
+[2c5515dc-2a7e-4bfd-b813-cacc2b685eb7]
+Text=Revo Uninstaller Pro
+Icon=*,1
 [b3026062-4d7e-3601-9a6b-622ceac3fc5c]
 Text=File Governor
 Icon=.\FileGovernor.exe
@@ -498,9 +514,8 @@ Text=CleanMyPC
 [6CB83A5A-AA68-4895-9F54-175E789AE149]
 Text=Balabolka
 Icon=.\balabolka.exe
-;PowerToys PowerRename
 [0440049f-d1dc-4e46-b27b-98393d79486b]
-Text=@*,-101
+Text=PowerRename(&W)
 [2e7a2c6c-b938-40a4-ba1c-c7ec982dc202]
 Text=发布DWF
 Icon=.\AcLauncher.exe
@@ -519,3 +534,15 @@ Text=FileMenu Tools
 [4380c993-0c43-4e02-9a7a-0d40b6ea7590]
 Text=Defraggler
 Icon=.\Defraggler.exe
+[271dc252-6fe1-4d59-9053-e4cf50ab99de]
+Text=VMware
+Icon=.\vmware.exe
+[e4d28edc-8c0b-43ee-9e7d-c8a8682334dc]
+Text=VMware 64bit
+Icon=.\vmware.exe
+[c52b9871-e5e9-41fd-b84d-c5acadbec7ae]
+Text=Locale Emulator
+Icon=.\LEGUI.exe
+[0a479751-02bc-11d3-a855-0004ac2568aa]
+Text=NTFS文件连接扩展配置工具
+Icon=.\LSEConfig.exe
