--- a/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
@@ -241,6 +241,8 @@ Icon=..\FreeArc.exe
 [AD392E40-428C-459F-961E-9B147782D099]
 Text=UltraISO
 Icon=.\UltraISO.exe
+[be86f80b-eb1a-45b4-b4b6-4b12d302b6bc]
+Text=AntZip
 
 ;----------------杀软------------------
 [09A47860-11B0-4DA5-AFA5-26D86198A780]
@@ -316,6 +318,7 @@ Text=使用瑞星杀毒
 [0bb81440-5f42-4480-a5f7-770a6f439fc8]
 Text=IObit Malware Fighter
 Icon=*,3
+
 ;----------------传输------------------
 [53D2405C-48AB-4C8A-8F59-CE0610F13BBC]
 Text=通过QQ发送到
