--- a/Update.ini
+++ b/Update.ini
@@ -1,4 +1,4 @@
 [Update]
-Version=3.0.0.0
-Url=https://github.com/BluePointLilac/ContextMenuManager/releases/download/3.0.0.0/ContextMenuManager.zip
-Info=【更新描述】\n(1).支持通过GUID添加ShellEx菜单项目；\n(2).添加ShellExecute函数，方便创建更加强大的Shell菜单项目；\n(3).添加WinX菜单创建和排序功能；\n(4).添加IE右键菜单管理和创建功能；\n(5).添加管理和创建右键拖拽菜单项目功能；\n(6).添加了丰富的字典，添加了很多增强菜单；\n(7).整合文件类型管理功能，使管理更加方便；\n(8).添加状态栏实时显示文件路径功能；\n(9).优化程序部分UI，优化部分代码，解决一些已知Bug。
+Version=3.1.0.0
+Url=https://github.com/BluePointLilac/ContextMenuManager/releases/download/3.1.0.0/ContextMenuManager.zip
+Info=【更新描述】\n(1).修复已知bug，优化部分代码。
