--- a/ContextMenuManager/Properties/Resources/Texts/AppLanguageDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/AppLanguageDic.ini
@@ -137,7 +137,6 @@ RecycleBinProperties = 属性(&R)
 RemovableDrive = 可移动磁盘
 BuildSendtoMenu = 快速构建发送到子菜单
 UseStoreOpenWith = 在Microsoft Store中查找应用
-ShareWithSkype = 使用 Skype 共享
 NewItem = 新建一个菜单项目
 AddGuidBlockedItem = 添加GUID锁定项目
 LockNewMenu = 锁定新建菜单
@@ -186,6 +185,7 @@ AudioDirectory = 音频目录
 CheckReference = 请勾选你想要引用的菜单项目
 CheckCopy = 请勾选你想要复制的菜单项目
 SelectGroup = 请选择保存分组
+SelectNewItemType = 请选择新建菜单类型
 SelectSubMenuMode = 该多级菜单子项目数为0, 你有两个选择:\n①该多级菜单的所有子菜单项目私有(推荐),\n②该多级菜单可与其他多级菜单引用相同子项,\n请做出你的选择......
 
 [MessageBox]
@@ -242,10 +242,7 @@ CreateGroup = 新建一个分组
 [Other]
 RestartExplorer = 当前部分操作需要重启文件资源管理器生效
 DictionaryDescription = 字典说明
-LanguageDictionary = 程序语言
 GuidInfosDictionary = GUID信息
-ThridRulesDictionary = 三方规则
-CommonItemsDictionary = 常用菜单
 Translators = 翻译贡献者
 OtherLanguages = 下载或上传其他语言文件
 DonationList = 捐赠名单
