--- a/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/GuidInfosDic.ini
@@ -34,7 +34,7 @@
 ;----------------系统------------------
 ;打开(快捷方式)
 [00021401-0000-0000-c000-000000000046]
-Text=@shell32.dll,-12850
+Text=打开(&O)
 Icon=shell32.dll,-16769
 ;打开文件所在的位置(&I)
 [37ea3a21-7493-4208-a011-7f9ea79ce9f5]
@@ -595,3 +595,13 @@ Icon=.\DirListerPro.exe
 [8e57c449-7891-49bb-80e5-ddac375f8ac8]
 Text=使用微表格打开
 Icon=.\microexcel.exe
+
+;-------------UWP新模块----------------
+[776dbc8d-7347-478c-8d71-791e12ef49d8]
+UwpName=Microsoft.SkypeApp
+Text=@*,-101
+Icon=.\Skype.exe
+[9F156763-7844-4DC4-B2B1-901F640F5155]
+UwpName=Microsoft.WindowsTerminal
+Text=Open in Windows Terminal
+Icon=.\WindowsTerminal.exe
