--- a/Update.ini
+++ b/Update.ini
@@ -1,4 +1,4 @@
 [Update]
-Version=3.1.1.0
-Url=https://github.com/BluePointLilac/ContextMenuManager/releases/download/3.1.1.0/ContextMenuManager.zip
-Info=【更新描述】\n(1).添加对UWP新右键菜单项目模块的解析，例子“使用 Skype 共享”“Open in Windows Terminal”。
+Version=3.1.2.0
+Url=https://github.com/BluePointLilac/ContextMenuManager/releases/download/3.1.2.0/ContextMenuManager.zip
+Info=【更新描述】\n(1).优化部分代码。
