--- a/Update.ini
+++ b/Update.ini
@@ -1,4 +1,4 @@
 [Update]
 Version=3.1.2.0
 Url=https://github.com/BluePointLilac/ContextMenuManager/releases/download/3.1.2.0/ContextMenuManager.zip
-Info=【更新描述】\n(1).优化部分代码。
+Info=【更新描述】\n(1).优化部分代码，修复部分Bug。
