统一为带BOM的UTF-8编码

--- a/ContextMenuManager/Properties/Resources/Texts/AppLanguageDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/AppLanguageDic.ini
@@ -1,4 +1,4 @@
-;此文件为 ContextMenuManager Windows右键管理程序 的显示文本字典
+﻿;此文件为 ContextMenuManager Windows右键管理程序 的显示文本字典
 ;翻译：可帮助作者为此程序提供翻译并提交到Github，以下内容中等号右侧内容替换为翻译文本，
 ;General-Translator为翻译贡献者，General-Language为语言名称，如en-US 美国英语
 ;翻译文件保存在Config\languages目录中，文件名保存为en-US.ini
