优化部分代码，添加翻译功能

--- a/ContextMenuManager/Properties/Resources/Texts/AppLanguageDic.ini
+++ b/ContextMenuManager/Properties/Resources/Texts/AppLanguageDic.ini
@@ -159,6 +159,10 @@ SelectDirectoryType = 请选择一个目录感知类型
 SelectGroup = 请选择保存分组
 SelectNewItemType = 请选择新建菜单类型
 SelectSubMenuMode = 该多级菜单子项目数为0, 你有两个选择:\n①该多级菜单的所有子菜单项目私有(推荐),\n②该多级菜单可与其他多级菜单引用相同子项,\n请做出你的选择......
+TranslateTool = 翻译器
+DefaultText = 默认文本
+OldTranslation = 旧译文
+NewTranslation = 新译文
 
 [MessageBox]
 TextCannotBeEmpty = 菜单文本不能为空!
